# purr

./: .gitignore  CLAUDE.md  README.md  install.sh  pyproject.toml
src/kitten_cli/: __main__.py  cli.py  config.py  models.py  playback.py  speak.py
tests/: test_models.py  test_playback.py  test_speak.py
