[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kitten-cli"
version = "0.1.0"
description = "CLI wrapper for KittenTTS — model management and speech synthesis"
readme = "README-KittenTTS.md"
requires-python = ">=3.8"
dependencies = [
    "typer[all]>=0.12",
    "sounddevice>=0.4",
    "soundfile>=0.12",
    "kittentts @ https://github.com/KittenML/KittenTTS/releases/download/0.8.1/kittentts-0.8.1-py3-none-any.whl",
]

[project.scripts]
purr = "kitten_cli.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/kitten_cli"]
