[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "purr"
version = "0.2.0"
description = "CLI wrapper for KittenTTS — model management and speech synthesis"
readme = "README.md"
requires-python = ">=3.8,<3.14"
dependencies = [
    "typer>=0.12",
    "sounddevice>=0.4",
    "soundfile>=0.12",
    "kittentts @ https://github.com/KittenML/KittenTTS/releases/download/0.8.1/kittentts-0.8.1-py3-none-any.whl",
    "addict>=2.4",  # undeclared dep of kittentts/misaki
    "httpx[socks]>=0.27",  # needed when a SOCKS proxy is configured
]

[project.scripts]
purr = "kitten_cli.cli:app"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/kitten_cli"]
